Added more content and completed the First Samurai (DLC 3) achievements in achievements.html.

--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -479,9 +479,9 @@
                         <img class="w-[96px] h-[96px] object-contain" src="./img/hidden_hopes.png" alt="">
                     </div></td>
                     <td>
-                        Encountered all of the Usura-Hicho in the main mission: 
-                        <a class="text-sky-400 hover:text-sky-600" href="">The Frenzied Blaze</a>. Interact with 3 swarms of 
-                        frozen butterflies. You can view the guide
+                        Encountered all of the <a class="text-sky-400 hover:text-sky-600" href="">Usura-Hicho</a> in the main 
+                        mission: <a class="text-sky-400 hover:text-sky-600" href="">The Frenzied Blaze</a>. Interact with 3 
+                        swarms of frozen butterflies. You can view the guide
                         <a class="text-sky-400 hover:text-sky-600" href="https://www.youtube.com/watch?v=py6E_BsXPEU" target="_blank" rel="noopener noreferrer">here</a>.
                     </td>
                 </tr>
@@ -1413,18 +1413,6 @@
                     <th>Description</th>
                 </tr>
 
-                <!-- ========== ========== ========== ========== ========== 
-                TEMPLATE:
-
-                <tr class="even:bg-dark-gray-2">
-                    <td><div class="flex flex-col justify-center items-center gap-3">
-                        <span></span>
-                        <img class="w-[96px] h-[96px] object-contain" src="" alt="">
-                    </div></td>
-                    <td></td>
-                </tr>
-                ========== ========== ========== ========== ========== -->
-
                 <!-- The Demon and the Phoenix -->
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
@@ -1554,6 +1542,196 @@
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Demon Slayers</a> (1)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Buddha's Palm</a> (1)</li>
                         </ul>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </section>
+
+
+    <section id="dlc3" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded
+            2xl:max-w-section-width lg:px-16">
+
+            <!-- ==========
+            section header
+            ========== -->
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">The First Samurai (DLC 3) Achievements</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Achievement</th>
+                    <th>Description</th>
+                </tr>
+
+                <!-- ========== ========== ========== ========== ========== 
+                TEMPLATE:
+
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span></span>
+                        <img class="w-[96px] h-[96px] object-contain" src="" alt="">
+                    </div></td>
+                    <td></td>
+                </tr>
+                ========== ========== ========== ========== ========== -->
+
+                <!-- All Things Begin -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>All Things Begin</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/all_things_begin.png" alt="">
+                    </div></td>
+                    <td>
+                        Completed the main mission: <a class="text-sky-400 hover:text-sky-600" href="">Dawn of the Demon</a>.
+                    </td>
+                </tr>
+
+                <!-- A Dream of Peace -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>A Dream of Peace</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/a_dream_of_peace.png" alt="">
+                    </div></td>
+                    <td>
+                        Completed the main mission: <a class="text-sky-400 hover:text-sky-600" href="">A Distant Dream</a>.
+                    </td>
+                </tr>
+
+                <!-- The Demon's Den -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>The Demon's Den</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/the_demons_den.png" alt="">
+                    </div></td>
+                    <td>
+                        Defeated the four demons in the main mission: <a class="text-sky-400 hover:text-sky-600" href="">A Distant Dream</a>. 
+                        <br><br> Defeat:
+                        <a class="text-sky-400 hover:text-sky-600" href="">Kinki</a>,
+                        <a class="text-sky-400 hover:text-sky-600" href="">Fuki</a>,
+                        <a class="text-sky-400 hover:text-sky-600" href="">Suiki</a>, and 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Ongyoki</a>.
+                    </td>
+                </tr>
+
+                <!-- Spirit Guide -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>Spirit Guide</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/spirit_guide.png" alt="">
+                    </div></td>
+                    <td>
+                        Collect all Kodama in The First Samurai (DLC 3). There are a total of 25 Kodama.
+                        <br><br>
+
+                        <ul class="list-disc list-inside flex flex-col gap-2">
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">Dawn of the Demon</a> (10)</li>
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">In Search of the Elixir</a> (6)</li>
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">A Distant Dream</a> (9)</li>
+                        </ul>
+                    </td>
+                </tr>
+
+                <!-- Spa Connoisseur -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>Spa Connoisseur</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/spa_connoisseur.png" alt="">
+                    </div></td>
+                    <td>
+                        Bathed in every Hot Spring found in The First Samurai (DLC 3). There are a total of 5 Hot Springs.
+                        <br><br>
+
+                        <ul class="list-disc list-inside flex flex-col gap-2">
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">Dawn of the Demon</a> (1)</li>
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">In Search of the Elixir</a> (2)</li>
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">A Distant Dream</a> (2)</li>
+                        </ul>
+                    </td>
+                </tr>
+
+                <!-- Way of the Vanquisher -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>Way of the Vanquisher</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/way_of_the_vanquisher.png" alt="">
+                    </div></td>
+                    <td>
+                        Completed the sub mission: <a class="text-sky-400 hover:text-sky-600" href="">Againt All Comers</a> on 
+                        Dream of the Demon (NG+2) or higher.
+                    </td>
+                </tr>
+
+                <!-- The Path We've Taken -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>The Path We've Taken</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/the_path_weve_taken.png" alt="">
+                    </div></td>
+                    <td>
+                        Obtained the aid of 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>, 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Minamoto no Yoshitsune</a>, and 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Minomoto no Yorimitsu</a> from a Benevolent Grave
+                        in the sub mission: <a class="text-sky-400 hover:text-sky-600" href="">A Familiar Glow</a>.
+                    </td>
+                </tr>
+
+                <!-- Cleansing Caskmaster -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>Cleansing Caskmaster</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/cleansing_caskmaster.png" alt="">
+                    </div></td>
+                    <td>
+                        Used a Cask of Holy Water in the main mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Dawn of the Demon</a> to damage an enemy's Ki.
+                    </td>
+                </tr>
+
+                <!-- Honoring the Dead -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>Honoring the Dead</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/honoring_the_dead.png" alt="">
+                    </div></td>
+                    <td>
+                        Collected all of Kukai's brushes in the sub mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Words of Respite</a>.
+                    </td>
+                </tr>
+
+                <!-- Scent of Danger -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>Scent of Danger</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/scent_of_danger.png" alt="">
+                    </div></td>
+                    <td>
+                        Completed the sub mission: <a class="text-sky-400 hover:text-sky-600" href="">Alluring Ancient</a>. 
+                        To unlock this mission you have to clear the main mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">A Distant Dream</a> and collect 3 Grilled Tang Sweets
+                        from the Region. 1 in the main mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">A Distance Dream</a>, 1 in the main mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Dawn of the Demon</a>, and
+                        1 in the sub mission: <a class="text-sky-400 hover:text-sky-600" href="">In Search of the Elixir</a>.
+                    </td>
+                </tr>
+
+                <!-- A Friend Indeed -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><div class="flex flex-col justify-center items-center gap-3">
+                        <span>A Friend Indeed</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/a_friend_indeed.png" alt="">
+                    </div></td>
+                    <td>
+                        Saved all of the <a class="text-sky-400 hover:text-sky-600" href="">Mujina</a> in the main mission: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">A Distant Dream</a>. There are a total of 3 Mujina in
+                        the level.
                     </td>
                 </tr>
             </table>
