--- a/wolong/wolong.html
+++ b/wolong/wolong.html
@@ -408,7 +408,7 @@
                     <a class="px-2 w-full  text-xl text-stone-900" href="">Farming Resources</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
-                    <a class="px-2 w-full  text-xl text-stone-900" href="">Achievements</a>
+                    <a class="px-2 w-full  text-xl text-stone-900" href="https://liukang1080.github.io/gamewiki/wolong/tools/achievements/achievements.html">Achievements</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
                     <a class="px-2 w-full  text-xl text-stone-900" href="">Builds</a>
