Added more content to achievements.html.

--- a/wolong/tools/achievements/achievements.html
+++ b/wolong/tools/achievements/achievements.html
@@ -377,7 +377,7 @@
                         <img class="w-[96px] h-[96px] object-contain" src="./img/vow_of_the_stalwart.png" alt="">
                     </div></td>
                     <td>
-                        Swear an oath with Zhao Yun. Complete the main battlefield: 
+                        Swear an oath with <a class="text-sky-400 hover:text-sky-600" href="">Zhao Yun</a>. Complete the main battlefield: 
                         <a class="text-sky-400 hover:text-sky-600" href="">Two Chivalrous Heros</a>.
                     </td>
                 </tr>
@@ -459,37 +459,49 @@
                 <!-- Ambition of the Tiger -->
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
-                        <span></span>
-                        <img class="w-[96px] h-[96px] object-contain" src="" alt="">
+                        <span>Ambition of the Tiger</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/ambition_of_the_tiger.png" alt="">
                     </div></td>
-                    <td></td>
+                    <td>
+                        Swear an oath with <a class="text-sky-400 hover:text-sky-600" href="">Sun Jian</a>. Complete the main battlefield: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">The Demon Fort of the Yellow Heaven</a>.
+                    </td>
                 </tr>
 
                 <!-- How Cute! -->
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
-                        <span></span>
-                        <img class="w-[96px] h-[96px] object-contain" src="" alt="">
+                        <span>How Cute!</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/how_cute.png" alt="">
                     </div></td>
-                    <td></td>
+                    <td>
+                        Feed your first <a class="text-sky-400 hover:text-sky-600" href="">Shitieshou</a>. Achievement can be
+                        obtained in the main battlefield: <a class="text-sky-400 hover:text-sky-600" href="">The Valley of Crying Wraiths</a>.
+                    </td>
                 </tr>
 
                 <!-- Guardian of Peace -->
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
-                        <span></span>
-                        <img class="w-[96px] h-[96px] object-contain" src="" alt="">
+                        <span>Guardian of Peace</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/guardian_of_peace.png" alt="">
                     </div></td>
-                    <td></td>
+                    <td>
+                        Swear an oath with <a class="text-sky-400 hover:text-sky-600" href="">Zuo Ci</a>. Complete the main battlefield: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">In Search of the Immortal Wizard</a>.
+                    </td>
                 </tr>
 
                 <!-- Awakening of the Unscrupulous Hero -->
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
-                        <span></span>
-                        <img class="w-[96px] h-[96px] object-contain" src="" alt="">
+                        <span>Awakening of the Unscrupulous Hero</span>
+                        <img class="w-[96px] h-[96px] object-contain" src="./img/awakening_of_the_unscrupulous_hero.png" alt="">
                     </div></td>
-                    <td></td>
+                    <td>
+                        Swear an oath with <a class="text-sky-400 hover:text-sky-600" href="">Cao Cao</a>. Complete the main battlefield: 
+                        <a class="text-sky-400 hover:text-sky-600" href="">Fall of the Corrupted Eunuch</a>.
+                    </td>
                 </tr>
 
                 <!-- Mightiest of Men -->
