--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -672,7 +672,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span class="text-boss-skill">Sword of Chaos</span>
-                        <img src="" alt="">
+                        <img src="./img/sword_of_chaos.png" alt="">
                     </div></td>
                     <td>530</td>
                     <td>
@@ -841,7 +841,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span class="text-boss-skill">Thunderous Impact</span>
-                        <img src="" alt="">
+                        <img src="./img/thunderous_impact.png" alt="">
                     </div></td>
                     <td>530</td>
                     <td>
@@ -1840,7 +1840,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Serpent's Torment</span>
-                        <img src="./img/serpents_torment.png items-center gap-3" alt="">
+                        <img src="./img/serpents_torment.png" alt="">
                     </div></td>
                     <td>320</td>
                     <td>
