Updated comment in achievements.html. Added underworld .html and .js files.

--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -35,8 +35,7 @@
     ========== ========== ========== -->
 </head>
 <body class="bg-stone-900 font-asul">
-    <!-- 
-    ========== ========== ========== ========== ==========
+    <!-- ========== ========== ========== ========== ==========
     Header
     ========== ========== ========== ========== ========== -->
     <header class="h-[95px] mask bg-medium-gray text-white">
@@ -202,11 +201,9 @@
             </div>
         </div>
 
-        <!-- 
-        ========== ========== ==========
+        <!-- ========== ========== ==========
         Mobile Only Menu (Navbar)
-        ========== ========== ==========
-        -->
+        ========== ========== ========== -->
         <div id="mobile-menu" class="absolute top-0 bg-medium-gray w-full text-4xl flex-col justify-center
             origin-top animate-open-menu hidden">
 
@@ -1549,6 +1546,9 @@
     </section>
 
 
+    <!-- ========== ========== ========== ========== ========== 
+    The First Samurai (DLC 3) Achievements Table
+    ========== ========== ========== ========== ========== -->
     <section id="dlc3" class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded
             2xl:max-w-section-width lg:px-16">
