Added underworld_index.html. Updated the href link for the Underworld in nioh2.html. Updated nioh2_TODO.txt. Added the respective images in underworld/img/.

--- a/nioh2/world/underworld/floors/floors.html
+++ b/nioh2/world/underworld/floors/floors.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Underworld</title>
+    <title>Floors of the Underworld</title>
     <!-- ========== ========== ==========
     Google Fonts (Asul)
     ========== ========== ========== -->
@@ -21,13 +21,13 @@
     TailWindCSS Link
     ========== ========== ========== -->
     <!-- <link type="text/css" href="https://liukang1080.github.io/gamewiki/css/output.css" rel="stylesheet"> -->
-    <link type="text/css" href="../../../css/output.css" rel="stylesheet">
+    <link type="text/css" href="/css/output.css" rel="stylesheet">
 
     <!-- ========== ========== ==========
     Manual CSS Link
     ========== ========== ========== -->
     <!-- <link type="text/css" href="https://liukang1080.github.io/gamewiki/css/manual.css" rel="stylesheet"> -->
-    <link type="text/css" href="../../../css/manual.css" rel="stylesheet">
+    <link type="text/css" href="/css/manual.css" rel="stylesheet">
 
     <!-- ========== ========== ==========
     TailWind CSS build process:
@@ -229,7 +229,7 @@
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
-            <h1 class="text-yellow-400 text-5xl md:text-6xl">The Underworld</h1>
+            <h1 class="text-yellow-400 text-5xl md:text-6xl">Floors of the Underworld</h1>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
         </div>
     </section>
@@ -936,8 +936,8 @@
     <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/navbar.js" defer></script>
     <!-- <script type="text/javascript" src="../../js/navbar.js" defer></script> -->
 
-    <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/nioh2/world/underworld/js/underworld.js" defer></script> -->
-    <script type="text/javascript" src="./js/underworld.js" defer></script>
+    <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/nioh2/world/underworld/floors/js/floors.js" defer></script> -->
+    <script type="text/javascript" src="./js/floors.js" defer></script>
 
 </body>
 </html>
