Fixed the heading text to be centered in floors.html. Fixed the colors for the card buttons in underworld_index.html.

--- a/nioh2/world/underworld/floors/floors.html
+++ b/nioh2/world/underworld/floors/floors.html
@@ -229,7 +229,7 @@
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
-            <h1 class="text-yellow-400 text-5xl md:text-6xl">Floors of the Underworld</h1>
+            <h1 class="text-yellow-400 text-5xl md:text-6xl text-center">Floors of the Underworld</h1>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
         </div>
     </section>
