Updated the javascript link into a comment in underworld_index.html.

--- a/nioh2/world/underworld/underworld_index.html
+++ b/nioh2/world/underworld/underworld_index.html
@@ -308,7 +308,7 @@
     <!-- <script type="text/javascript" src="../../js/navbar.js" defer></script> -->
 
     <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/nioh2/world/" defer></script> -->
-    <script type="text/javascript" src="" defer></script>
+    <!-- <script type="text/javascript" src="" defer></script> -->
 
 </body>
 </html>
