Added and completed depths .html and .js files. Added empty jizo.html. Updated the padding of the <h2> header in the Layers section in floors.html.

--- a/nioh2/world/underworld/floors/floors.html
+++ b/nioh2/world/underworld/floors/floors.html
@@ -253,7 +253,7 @@
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
-            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Layout of each Floor of the Underworld</h2>
+            <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Layout of each Floor of the Underworld</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
