--- a/nioh2/world/underworld/lapis/lapis.html
+++ b/nioh2/world/underworld/lapis/lapis.html
@@ -261,17 +261,18 @@
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="font-bold text-red-700">Lapis Lazuli: </span>Underworld Lapis Lazuli (also known as Gems of the 
-                Departed), is a rare resource that only drops in the Underworld, and the Depths of the Underworld. Regular Enemies
-                , and Red Enemies in the Netherscape have a random chance to drop between ~0 - 5 Lapis Lazuli. Purple enemies have
-                a higher chance to drop more Lapis Lazuli. Bosses in the Crucible have a random chance to drop around ~5 - 15 
-                Lapis Lazuli (guarenteed to drop Lapis Lazuli). When Lapis Lazuli drops, it will drop as an Ethereal rarity item.
+                Departed), is a rare resource that only drops in the Underworld, and the Depths of the Underworld. Regular 
+                Enemies, and Red Enemies in the Netherscape have a random chance to drop between ~0 - 5 Lapis Lazuli. Purple 
+                enemies have a higher chance to drop more Lapis Lazuli. Bosses in the Crucible have a random chance to drop 
+                around ~5 - 15 Lapis Lazuli (guarenteed to drop Lapis Lazuli). When Lapis Lazuli drops, it will drop as an 
+                Ethereal rarity item.
             </p>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl italic leading-relaxed">
                 <span class="font-bold">"</span> Presenting this to 
-                <a class="text-sky-400 hover:text-sky-600" href="">Ono no Takamura</a> will allow you to receive and strengthen 
-                blessings in the Underworld. A gem found in the Underworld, Lapis Lazuli is regarded as one of seven treasures 
-                in the teachings of Buddhism. When Yama still served as judge to those sent there, the Underworld was decorated 
+                <a class="text-sky-400 hover:text-sky-600" href="">Ono no Takamura</a> will allow you to receive and strengthen
+                blessings in the Underworld. A gem found in the Underworld, Lapis Lazuli is regarded as one of seven treasures
+                in the teachings of Buddhism. When Yama still served as judge to those sent there, the Underworld was decorated
                 with Lapis Lazuli that shone brilliantly. However, they were scattered and lost after a great calamity occurred.
                 <span class="font-bold">"</span>
             </p>
