Added lazy loading to the achievements <img> tags in wolong/achievements and nioh2/achievements .html files. Added high priority for loading for main image in lapis.html for testing.

--- a/nioh2/world/underworld/lapis/lapis.html
+++ b/nioh2/world/underworld/lapis/lapis.html
@@ -257,7 +257,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <!-- main image -->
-            <img src="./img/lapis_lazuli.png" alt="">
+            <img fetchpriority=high src="./img/lapis_lazuli.png" alt="">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="font-bold text-red-700">Lapis Lazuli: </span>Underworld Lapis Lazuli (also known as Gems of the 
