--- a/index.html
+++ b/index.html
@@ -1,64 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wiki Websites for Nioh 2 and Wo Long: Fallen Kingdom</title>
-    <!-- 
-    ========== ========== ==========
+    <title>Wiki Websites for Nioh 2 and Wo Long: Fallen Dynasty</title>
+    <!-- ========== ========== ==========
     FlowBite CSS
-    ========== ========== ==========
-    -->
+    ========== ========== ========== -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"  rel="stylesheet" />
 
-    <!-- 
-    ========== ========== ==========
+    <!-- ========== ========== ==========
     TailWindCSS Link
-    ========== ========== ==========
-    -->
+    ========== ========== ========== -->
     <link href="./css/output.css" rel="stylesheet">
 
-    <!-- 
-    ========== ========== ==========
+    <!-- ========== ========== ==========
     Manual CSS Link
-    ========== ========== ==========
-    -->
+    ========== ========== ========== -->
     <link href="./css/manual.css" rel="stylesheet">
 
-    <!--
-    ========== ========== ==========
+    <!--========== ========== ==========
     TailWind CSS build process:
     npx tailwindcss -i ./css/input.css -o ./css/output.css --watch
-    ========== ========== ==========
-    -->
-
+    ========== ========== ========== -->
 </head>
 <body class="site-index">
-    <!-- 
-    ========== ========== ==========
+    <!-- ========== ========== ==========
     Card Section
-    ========== ========== ==========
-    -->
+    ========== ========== ========== -->
     <section class="h-auto mt-6 mb-6 flex flex-col justify-center items-center gap-6
         lg:h-screen lg:flex-row lg:mt-0 lg:mb-0">
         
         <!-- Nioh 2 Card -->
-        <a href="./nioh2/nioh2.html" class="mask w-fit flex flex-col items-center bg-white border border-black">
+        <a href="./nioh2/nioh2.html" class="group mask w-fit flex flex-col items-center bg-white border border-black">
             <img src="./img/nioh2_card.png" alt="">
-            <span class="mt-4 mb-4 font-bold text-xl text-blue-500 hover:text-sky-500">Nioh 2 Wiki</span>
+            <span class="mt-4 mb-4 font-bold text-xl text-sky-700 group-hover:text-sky-500">Nioh 2 Wiki</span>
         </a>
 
         <!-- Wo Long Card -->
-        <a href="./wolong/wolong.html" class="mask w-fit flex flex-col items-center bg-white border border-black">
+        <a href="./wolong/wolong.html" class="group mask w-fit flex flex-col items-center bg-white border border-black">
             <img src="./img/wolong_card.png" alt="">
-            <span class="mt-4 mb-4 font-bold text-xl text-blue-500 hover:text-sky-500">Wo Long: Fallen Dynasty Wiki</span>
+            <span class="mt-4 mb-4 font-bold text-xl text-sky-700 group-hover:text-sky-500">Wo Long: Fallen Dynasty Wiki</span>
         </a>
     </section>
 
-    <!-- JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
 
+    <!-- ========== ========== ========== ========== ==========
+    JavaScript
+    ========== ========== ========== ========== ========== -->
+    <!-- FlowBite JavaScript -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script> -->
 
 </body>
 </html>
@@ -69,8 +61,8 @@
         https://www.w3schools.com/howto/howto_js_sort_table.asp
 -->
 
+
 <!-- Credits -->
 <!--
     - Website Development - LiuKang1080
-    - Website Design - Matsu
 -->
