Added the mask class to the main <img> tags for the missions logos in missions_index.html. Added the href link to missions_index.html in nioh2 and world_index .html files.

--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -402,7 +402,7 @@
             ========== -->
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full text-xl text-yellow-400" href="">Missions</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="https://liukang1080.github.io/gamewiki/nioh2/world/missions/missions_index.html">Missions</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-yellow-400" href="">Bosses</a>
