--- a/nioh2/world/world_index.html
+++ b/nioh2/world/world_index.html
@@ -252,7 +252,7 @@
                 Missions (Button 1)
                 ========== -->
                 <a class="group w-full h-[250px] p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
+                    href="https://liukang1080.github.io/gamewiki/nioh2/world/missions/missions_index.html">
                     
                     <img src="./img/missions_logo.png" alt="">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
