Updated href link in nioh2.html. Updated world_index.html. Added more content to equipment_index.html. Added the respective images in /equipment/img/.

--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -340,7 +340,7 @@
             top row 
             ========== -->
             <a class="mask w-full h-[98px] py-2 rounded flex flex-col items-center justify-center bg-medium-red hover:bg-light-red"
-                href="">
+                href="https://liukang1080.github.io/gamewiki/nioh2/equipment/equipment_index.html">
                 
                 <img src="./img/equipment_icon.png" alt="">
                 <span class="  text-2xl text-slate-300">Equipment</span>
