--- a/nioh2/world/world_index.html
+++ b/nioh2/world/world_index.html
@@ -246,8 +246,6 @@
                 md:grid md:grid-cols-2
                 2xl:grid 2xl:grid-cols-3">
 
-                <!-- https://liukang1080.github.io/gamewiki/nioh2/world/underworld/floors/floors.html -->
-
                 <!-- ==========
                 Missions (Button 1)
                 ========== -->
@@ -285,7 +283,7 @@
                 The Underworld (Button 4)
                 ========== -->
                 <a class="group w-full h-[250px] p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
+                    href="https://liukang1080.github.io/gamewiki/nioh2/world/underworld/underworld_index.html">
                     
                     <img src="./img/underworld_logo.png" alt="">
                     <span class="mask w-full p-2 place-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
