Updated all of the script links for top_button.js in various files.

--- a/nioh2/equipment/guardian_spirits/guardian_spirits.html
+++ b/nioh2/equipment/guardian_spirits/guardian_spirits.html
@@ -294,8 +294,8 @@
     <!-- <script type="text/javascript" src="../../js/navbar.js" defer></script> -->
 
     <!-- Top Button JS -->
-    <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/top_button.js" defer></script> -->
-    <script type="text/javascript" src="../../../js/top_button.js" defer></script>
+    <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/top_button.js" defer></script>
+    <!-- <script type="text/javascript" src="../../js/top_button.js" defer></script> -->
 
     <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/nioh2/world/missions/js/recommended.js " defer></script> -->
     <script type="text/javascript" src="" defer></script>
