--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -1765,8 +1765,8 @@
     <!-- <script type="text/javascript" src="../../js/navbar.js" defer></script> -->
 
     <!-- Top Button JS -->
-    <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/top_button.js" defer></script> -->
-    <script type="text/javascript" src="../../../js/top_button.js" defer></script>
+    <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/top_button.js" defer></script>
+    <!-- <script type="text/javascript" src="../../js/top_button.js" defer></script> -->
 
     <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/nioh2/tools/achievements/js/achievements.js" defer></script> -->
     <script type="text/javascript" src="./js/achievements.js" defer></script>
