--- a/nioh2/world/underworld/floors/floors.html
+++ b/nioh2/world/underworld/floors/floors.html
@@ -936,6 +936,10 @@
     <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/navbar.js" defer></script>
     <!-- <script type="text/javascript" src="../../js/navbar.js" defer></script> -->
 
+    <!-- Top Button JS -->
+    <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/top_button.js" defer></script>
+    <!-- <script type="text/javascript" src="../../js/top_button.js" defer></script> -->
+
     <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/nioh2/world/underworld/floors/js/floors.js" defer></script> -->
     <script type="text/javascript" src="./js/floors.js" defer></script>
 
