--- a/nioh2/world/underworld/lapis/lapis.html
+++ b/nioh2/world/underworld/lapis/lapis.html
@@ -454,6 +454,10 @@
     <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/navbar.js" defer></script>
     <!-- <script type="text/javascript" src="../../js/navbar.js" defer></script> -->
 
+    <!-- Top Button JS -->
+    <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/top_button.js" defer></script>
+    <!-- <script type="text/javascript" src="../../js/top_button.js" defer></script> -->
+
     <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/nioh2/world/underworld/lapis/js/lapis.js" defer></script> -->
     <script type="text/javascript" src="./js/lapis.js" defer></script>
 
