--- a/wolong/combat/martial_arts/martial_arts.html
+++ b/wolong/combat/martial_arts/martial_arts.html
@@ -2590,6 +2590,10 @@
     <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/navbar.js" defer></script>
     <!-- <script src="../../js/navbar.js" type="text/javascript" defer></script> -->
 
+    <!-- Top Button JS -->
+    <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/top_button.js" defer></script>
+    <!-- <script type="text/javascript" src="../../js/top_button.js" defer></script> -->
+
     <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/wolong/combat/martial_arts/js/martial_arts.js" defer></script> -->
     <script type="text/javascript" src="./js/martial_arts.js" defer></script>
 
