--- a/wolong/tools/achievements/achievements.html
+++ b/wolong/tools/achievements/achievements.html
@@ -956,6 +956,10 @@
     <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/navbar.js" defer></script>
     <!-- <script src="../../js/navbar.js" type="text/javascript" defer></script> -->
 
+    <!-- Top Button JS -->
+    <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/top_button.js" defer></script>
+    <!-- <script type="text/javascript" src="../../js/top_button.js" defer></script> -->
+
     <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/wolong/tools/achievements/js/achievements.js" defer></script> -->
     <script type="text/javascript" src="./js/achievements.js" defer></script>
 
