--- a/nioh2/equipment/equipment_index.html
+++ b/nioh2/equipment/equipment_index.html
@@ -308,7 +308,7 @@
                 Guardian Spirits (Button 6)
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
+                    href="https://liukang1080.github.io/gamewiki/nioh2/equipment/guardian_spirits/guardian_spirits.html">
                     
                     <img class="mask rounded-lg" src="./img/guardianspirits_logo.png" alt="">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
