Updated text (attempt to fix mobile views / responsiveness) in guardian_spirits.html.

--- a/nioh2/equipment/guardian_spirits/guardian_spirits.html
+++ b/nioh2/equipment/guardian_spirits/guardian_spirits.html
@@ -383,7 +383,7 @@
                             <tr>
                                 <th>Special Effect</th>
                                 <th>Bonus</th>
-                                <th>Stat Requirement</th>
+                                <th>Stat Req</th>
                             </tr>
 
                             <tr>
@@ -456,7 +456,7 @@
                             <tr>
                                 <th>Special Effect</th>
                                 <th>Bonus</th>
-                                <th>Stat Requirement</th>
+                                <th>Stat Req</th>
                             </tr>
 
                             <tr>
@@ -529,7 +529,7 @@
                             <tr>
                                 <th>Special Effect</th>
                                 <th>Bonus</th>
-                                <th>Stat Requirement</th>
+                                <th>Stat Req</th>
                             </tr>
 
                             <tr>
@@ -602,7 +602,7 @@
                             <tr>
                                 <th>Special Effect</th>
                                 <th>Bonus</th>
-                                <th>Stat Requirement</th>
+                                <th>Stat Req</th>
                             </tr>
 
                             <tr>
@@ -678,7 +678,7 @@
                             <tr>
                                 <th>Special Effect</th>
                                 <th>Bonus</th>
-                                <th>Stat Requirement</th>
+                                <th>Stat Req</th>
                             </tr>
 
                             <tr>
@@ -754,7 +754,7 @@
                             <tr>
                                 <th>Special Effect</th>
                                 <th>Bonus</th>
-                                <th>Stat Requirement</th>
+                                <th>Stat Req</th>
                             </tr>
 
                             <tr>
